supplementary of last paper

--- a/report/clinical/mainmatter/author_contrib.tex
+++ b/report/clinical/mainmatter/author_contrib.tex
@@ -7,7 +7,7 @@ Anirudh Tomer had full access to all the data in the study and takes responsibil
 \textit{Drafting of the manuscript:} Tomer, and Rizopoulos\\
 \textit{Critical revision of the manuscript for important intellectual content}: Tomer, Nieboer, Roobol, Bjartell, Steyerberg, and Rizopoulos\\
 \textit{Statistical analyses}: Tomer, Nieboer, Steyerberg, and Rizopoulos\\
-\textit{Obtaining funding}: Roobol, and Rizopoulos\\
+\textit{Obtaining funding}: Roobol, Steyerberg, and Rizopoulos\\
 \textit{Administrative, technical or material support}: Nieboer\\
 \textit{Supervision:} Roobol, and Rizopoulos\\
 \textit{Other:} none
