--- a/report/clinical/mainmatter/discussion.tex
+++ b/report/clinical/mainmatter/discussion.tex
@@ -7,4 +7,4 @@ Our PRIAS based model is useful for a large number of patients from the PRIAS an
 
 The clinical implications of our work are as follows. First, the cause-specific cumulative upgrading-risk at year five of follow-up was at most 50\% in all cohorts (Panel~B, Figure~\ref{fig:auc_beforecalib}). That is, many patients may not require any biopsy in the first five years of AS. Given the non-compliance and burden of frequent biopsies~\citep{bokhorst2015compliance}, the availability of our methodology as a web-application may encourage patients/doctors to consider upgrading-risk based personalized schedules instead. An additional advantage of these schedules is that they update as more patient data becomes available over follow-up. Furthermore, to assist patients/doctors in choosing between personalized and fixed schedules, the web-application provides a patient-specific estimate of time delay in detecting upgrading, for following both personalized and fixed schedules. We hope that this will objectively address patient apprehensions regarding adverse outcomes in AS. 
 
-This work has certain limitations. Predictions for upgrading-risk and personalized schedules are available only for a currently limited, cohort-specific, follow-up period (Table 7, Supplementary~C). This problem can be mitigated by refitting the model with new follow-up data in the future. It is important to differentiate the instantaneous PSA velocity (predictor for upgrading-risk in our model), from the currently used constant PSA velocity. Unlike the drawbacks suffered by the constant PSA velocity~\citep{vickers2009psavelocity}, instantaneous PSA velocity is more precise. This is because it changes over time and is estimated from the fitted longitudinal PSA profile of a patient. Along with PSA, in some cohorts recently, MRI is also used for deciding biopsies. However, the utility of MRI can only be determined with more follow-up data in the future. Subsequently, MRI data can also be added as a predictor in our model. Decisions based on information combined from multiple sources can yield better results than based on MRI or PSA alone. We scheduled biopsies using cause-specific cumulative upgrading-risk. Accounting for competing events, such as treatment based on the number of positive biopsy cores, may lead to improved personalized biopsy decisions. Although, in this work, we did not consider such additional triggers for treatment because, unlike upgrading, they differ between cohorts~\citep{nieboer2018active}. Upgrading is susceptible to inter-observer variation too. Models which account for this variation~\citep{coley2017prediction,balasubramanian2003estimation} will be interesting to investigate further. However, the methodology for personalized scheduling, and for comparison of various schedules need not change.
+This work has certain limitations. Predictions for upgrading-risk and personalized schedules are available only for a currently limited, cohort-specific, follow-up period (Table 7, Supplementary~C). This problem can be mitigated by refitting the model with new follow-up data in the future. It is important to differentiate the instantaneous PSA velocity (predictor for upgrading-risk in our model), from the currently used and criticized constant PSA velocity~\citep{vickers2009psavelocity}. Instantaneous PSA velocity changes over time and hence is more precise than constant velocity. Along with PSA, in some cohorts recently, MRI is also used for deciding biopsies. However, the utility of MRI can only be determined with more follow-up data in the future. Subsequently, MRI data can also be added as a predictor in our model. Decisions based on information combined from multiple sources can yield better results than based on MRI or PSA alone. We scheduled biopsies using cause-specific cumulative upgrading-risk. Accounting for competing events, such as treatment based on the number of positive biopsy cores, may lead to improved personalized biopsy decisions. Although, in this work, we did not consider such additional triggers for treatment because, unlike upgrading, they differ between cohorts~\citep{nieboer2018active}. Upgrading is susceptible to inter-observer variation too. Models which account for this variation~\citep{coley2017prediction,balasubramanian2003estimation} will be interesting to investigate further. However, the methodology for personalized scheduling, and for comparison of various schedules need not change.
