--- a/report/clinical/mainmatter/stat_analysis.tex
+++ b/report/clinical/mainmatter/stat_analysis.tex
@@ -2,7 +2,7 @@
 \subsection{Statistical Model}
 For developing an upgrading-risk prediction model, the available data in the PRIAS cohort was patient age at inclusion in AS, longitudinally measured PSA, timing of repeat biopsies and corresponding Gleason grades, and observed time of upgrading. Analysis of this data required modeling the within-patient correlation for PSA, the association between the Gleason grades and PSA profiles of a patient, and handling missing PSA measurements after a patient experienced upgrading. In such situations, a commonly used model is the joint model for time-to-event and longitudinal data~\citep{tomer2019,coley2017prediction,rizopoulos2012joint}.
 
-Our joint model consisted of two sub-models. First, a linear mixed sub-model~\citep{laird1982random} for longitudinally measured PSA (log-transformed). Second, a relative-risk sub-model (similar to the Cox model) for obtaining the cause-specific upgrading-risk. Patient age was included as a predictor in both sub-models. In the PSA sub-model, we fitted a curve to the PSA measurements (Panel~A, Figure~\ref{fig:jmExplanationPlot_113}). From each patient's fitted PSA profile, we extracted his time-varying PSA velocity (Panel~B, Figure~\ref{fig:jmExplanationPlot_113}). This instantaneous velocity is more precise than the widely employed constant PSA velocity~\citep{vickers2009psavelocity}. We modeled the impact of PSA on upgrading-risk by including fitted PSA value and velocity as predictors in the relative-risk model. Also, the time of the latest negative biopsy was utilized in the relative-risk sub-model (Panel~C, Figure~\ref{fig:jmExplanationPlot_113}). The parameters of the two sub-models were estimated jointly (Supplementary~A) using the R package \textbf{JMbayes}~\citep{rizopoulosJMbayes}. 
+Our joint model consisted of two sub-models. First, a linear mixed sub-model~\citep{laird1982random} for longitudinally measured PSA (log-transformed). Second, a relative-risk sub-model (similar to the Cox model) for obtaining the cause-specific upgrading-risk. Patient age was included as a predictor in both sub-models. In the PSA sub-model, we fitted a curve to the PSA measurements (Panel~A, Figure~\ref{fig:jmExplanationPlot_113}). Subsequently, we calculate the mathematical derivative of the fitted PSA profile over time to obtain PSA velocity. This instantaneous velocity is flexible over follow-up (Panel~B, Figure~\ref{fig:jmExplanationPlot_113}), and hence captures more information than the widely employed constant PSA velocity~\citep{vickers2009psavelocity}. We modeled the impact of PSA on upgrading-risk by including fitted PSA value and velocity as predictors in the relative-risk model. Also, the time of the latest negative biopsy was utilized in the relative-risk sub-model (Panel~C, Figure~\ref{fig:jmExplanationPlot_113}). The parameters of the two sub-models were estimated jointly (Supplementary~A) using the R package \textbf{JMbayes}~\citep{rizopoulosJMbayes}. 
 
 \begin{figure}
 \centerline{\includegraphics[width=\columnwidth]{images/jmExplanationPlot_113.eps}}
