--- a/report/lastpaper/bibliography.bib
+++ b/report/lastpaper/bibliography.bib
@@ -17,6 +17,28 @@
   publisher={Elsevier}
 }
 
+@article{jullion2007robust,
+  title={Robust specification of the roughness penalty prior distribution in spatially adaptive Bayesian P-splines models},
+  author={Jullion, Astrid and Lambert, Philippe},
+  journal={Computational statistics \& data analysis},
+  volume={51},
+  number={5},
+  pages={2542--2558},
+  year={2007},
+  publisher={Elsevier}
+}
+
+@article{andrinopoulou2016bayesian,
+  title={Bayesian shrinkage approach for a joint model of longitudinal and survival outcomes assuming different association structures},
+  author={Andrinopoulou, Eleni-Rosalina and Rizopoulos, Dimitris},
+  journal={Statistics in medicine},
+  volume={35},
+  number={26},
+  pages={4813--4823},
+  year={2016},
+  publisher={Wiley Online Library}
+}
+
 @article{ayer2012or,
   title={OR Forum—A POMDP approach to personalize mammography screening decisions},
   author={Ayer, Turgay and Alagoz, Oguzhan and Stout, Natasha K},
@@ -744,7 +766,16 @@ publisher={Elsevier}
 }
 
 
-
+@article{lang2004bayesian,
+  title={Bayesian P-splines},
+  author={Lang, Stefan and Brezger, Andreas},
+  journal={Journal of computational and graphical statistics},
+  volume={13},
+  number={1},
+  pages={183--212},
+  year={2004},
+  publisher={Taylor \& Francis}
+}
 
 
 
