--- a/report/clinical/mainmatter/introduction.tex
+++ b/report/clinical/mainmatter/introduction.tex
@@ -8,7 +8,7 @@ Patients with low- and very low-risk screening-detected localized prostate cance
 \label{fig:delay_explanation}
 \end{figure}
 
-In most AS protocols, biopsies are scheduled periodically. Consequently, upgrading is always detected with a time delay (Figure~\ref{fig:delay_explanation}). For detecting upgrading timely, many AS programs schedule fixed and frequent biopsies (e.g.,~annually) for all patients~\citep{nieboer2018active,loeb2014heterogeneity}. However, this leads to many unnecessary biopsies in slow/non-progressing patients. Biopsies are invasive, may be painful, and are prone to medical complications such as bleeding and septicemia\citep{loeb2013systematic}. Thus, biopsy burden and patient non-compliance to frequent biopsies~\citep{bokhorst2015compliance} has raised concerns regarding the optimal biopsy schedule~\citep{inoue2018comparative, bratt2013study}. To this end, some cohorts have started using magnetic resonance imaging (MRI) for deciding biopsies. Although, due to currently limited AS data, MRI's value is not clear. Others have proposed infrequent schedules such as biennial biopsies as an alternative~\citep{inoue2018comparative,de2017estimating}. However, fundamental differences exist in underlying upgrading-risk across cohorts~\citep{inoue2018comparative}. Thus, biennial biopsies may still lead to five unnecessary biopsies over ten years (current study period of large AS programs) for many slow/non-progressing patients. A promising alternative to fixed and frequent biopsies is personalized biopsy schedules based on the patient-specific upgrading-risk (Figure~\ref{fig:riskBasedExample}).
+In most AS protocols, biopsies are scheduled periodically. Consequently, upgrading is always detected with a time delay (Figure~\ref{fig:delay_explanation}). For detecting upgrading timely, many AS programs schedule fixed and frequent biopsies (e.g.,~annually) for all patients~\citep{nieboer2018active,loeb2014heterogeneity}. However, this leads to many unnecessary biopsies in slow/non-progressing patients. Biopsies are invasive, may be painful, and are prone to medical complications such as bleeding and septicemia\citep{loeb2013systematic}. Thus, biopsy burden and patient non-compliance to frequent biopsies~\citep{bokhorst2015compliance} has raised concerns regarding the optimal biopsy schedule~\citep{inoue2018comparative, bratt2013study}. To this end, in some cohorts, MRI is used to explore the possibility of targeting visible tumor by biopsy, and to study the value for tumor monitoring. Although, due to currently limited AS data, MRI's value is not clear. Others have proposed infrequent schedules such as biennial biopsies as an alternative~\citep{inoue2018comparative,de2017estimating}. Due to the differences in baseline upgrading-risk across cohorts~\citep{inoue2018comparative}, the fixed biopsy scheme may lead to many unnecessary biopsies per cohort, as well as across cohorts. A promising alternative to fixed and frequent biopsies is personalized biopsy schedules based on the patient-specific upgrading-risk (Figure~\ref{fig:riskBasedExample}).
 
 \begin{figure}
 \centerline{\includegraphics[width=\columnwidth]{images/riskBasedExample.eps}}
@@ -16,6 +16,6 @@ In most AS protocols, biopsies are scheduled periodically. Consequently, upgradi
 \label{fig:riskBasedExample}
 \end{figure}
 
-The first challenge in developing personalized biopsy schedules is consolidating accumulated patient data (e.g., PSA, previous biopsy results) into estimates for upgrading-risk. Existing calculators for upgrading-risk~\citep{partin1993use,makarov2007updated} use only the latest PSA measurement of a patient. In contrast, we intend to utilize all repeated measurements of PSA, previous biopsy results, and baseline characteristics of a patient. To this end, a suitable model is the joint model for time-to-event and longitudinal data~\citep{tomer2019, coley2017prediction,rizopoulos2012joint}. A joint model predicts the upgrading-risk in a personalized manner. A subsequent challenge, however, is translating risks into clinical decisions. For example, a 10\% upgrading-risk can be perceived high/low depending upon the patient's age. Patients may also weigh risks of upgrading with the potential \textit{consequences} of another biopsy. Two relevant \textit{consequences} of biopsies (Figure~\ref{fig:delay_explanation}) are the timing and the total number of biopsies (burden), and the time delay in detecting upgrading (smaller is beneficial). The relative importance of these \textit{consequences} can vary between the patients, and also over the follow-up period for the same patient.
+The first challenge in creating personalized biopsy schedules is developing a statistical model to consolidate accumulated patient data (e.g., PSA, previous biopsy results) into estimates for upgrading-risk. Existing calculators for upgrading-risk~\citep{partin1993use,makarov2007updated} use only the latest PSA measurement of a patient. In contrast, more information is captured by considering all repeated measurements of PSA, previous biopsy results, and baseline characteristics of a patient. To this end, a suitable model is the joint model for time-to-event and longitudinal data~\citep{tomer2019, coley2017prediction,rizopoulos2012joint}. A joint model predicts the upgrading-risk in a personalized manner. A subsequent challenge, however, is translating risks into clinical decisions. For example, a 10\% upgrading-risk can be perceived high/low depending upon the patient's age. Patients may also weigh risks of upgrading with the potential \textit{consequences} of another biopsy. Two relevant \textit{consequences} of biopsies (Figure~\ref{fig:delay_explanation}) are the timing and the total number of biopsies (burden), and the time delay in detecting upgrading (smaller is beneficial). The relative importance of these \textit{consequences} can vary between the patients, and also over the follow-up period for the same patient.
 
 The goal of this work is to develop a robust, generalizable model that gives reliable estimates for individual upgrading-risk, and to create personalized biopsy schedules based on this risk. To facilitate shared decision making of biopsy schedules, we also aim to provide quantitative estimates of \textit{consequences} of opting for a personalized versus the standard fixed schedule. For developing our model, we will use the world's largest AS dataset PRIAS. Subsequently, we want to externally validate our model in the largest five AS cohorts from the Movember Foundation's GAP3 database~\citep{gap3_2018}. Last, we intend to implement our model and methodology in a web-application.
