--- a/report/lastpaper/supplementary.tex
+++ b/report/lastpaper/supplementary.tex
@@ -11,24 +11,16 @@
 %% Useful packages
 \usepackage[tbtags]{amsmath}
 \usepackage{mathtools}
-\usepackage[colorinlistoftodos]{todonotes}
 \usepackage[colorlinks=true, allcolors=blue]{hyperref}
 \usepackage{color}
 \usepackage{caption}
 \usepackage[shortlabels]{enumitem}
-\usepackage{setspace}
 \usepackage{authblk}
 \usepackage{xr}
-\usepackage{floatrow}
-\usepackage{colortbl}
-
-\floatstyle{plaintop}
-\restylefloat{table}
 
 % package to manage citations
 \usepackage[backend=bibtex,style=authoryear-comp,sorting=nyt,isbn=false,url=false, natbib=true, doi=false]{biblatex}
 \addbibresource{bibliography.bib}
-
 
 \newcommand*\diff{\mathop{}\!\mathrm{d}}
 %\newcommand{\argmax}[1]{\underset{#1}{\operatorname{arg}\,\operatorname{max}}\;}
@@ -52,7 +44,7 @@
 }
 
 \begin{document}
-\title{\textbf{Supplementary Materials for ``Personalized Decision Making for Biopsies in Prostate Cancer Active Surveillance Programs''}}
+\title{\textbf{Supplementary Materials for ``Personalized Schedules for Burdensome Surveillance Tests''}}
 
 \author[1,*]{\normalsize Anirudh Tomer}
 \author[2]{Daan Nieboer}
@@ -73,9 +65,9 @@
 \clearpage
 \input{supplementary/prias_param_estimates}
 \clearpage
-\input{supplementary/full_results}
-\clearpage
-\input{supplementary/source_code}
+\input{supplementary/extra_examples}
+%\clearpage
+%\input{supplementary/source_code}
 \clearpage
 \printbibliography
 
